--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -1,7 +1,38 @@
 <p>continue-with-google works!</p>
 
 <div *ngIf="errorMessage" class="error-message">
-    {{ errorMessage }}
+  {{ errorMessage }}
 </div>
 
 <button (click)="continueWithGoogle()">Continue with Google</button>
+<br>
+<br>
+<form [formGroup]="loginForm" (ngSubmit)="login()">
+  <div class="form-group">
+    <label>
+      Username:
+      <input type="text" formControlName="username">
+    </label>
+    <div *ngIf="loginForm.get('username')?.errors?.['required'] && loginForm.get('username')?.touched"
+      class="error-message">
+      Username is required.
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label>
+      Password:
+      <input type="password" formControlName="password">
+    </label>
+    <div *ngIf="loginForm.get('password')?.errors?.['required'] && loginForm.get('password')?.touched"
+      class="error-message">
+      Password is required.
+    </div>
+  </div>
+
+  <button type="submit">Login</button>
+</form>
+
+
+
+<p>{{ errorMessage }}</p>
