--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -1,9 +1,12 @@
-<p>continue-with-google works!</p>
-
 <div *ngIf="errorMessage" class="error-message">
   {{ errorMessage }}
 </div>
+<div *ngIf="successMessage" class="success-message">
+  {{ successMessage }}
+</div>
 
+<br>
+<br>
 <button (click)="continueWithGoogle()">Continue with Google</button>
 <br>
 <br>
@@ -32,7 +35,3 @@
 
   <button type="submit">Login</button>
 </form>
-
-
-
-<p>{{ errorMessage }}</p>
