--- a/src/app/user-management/view-user/view-user.component.html
+++ b/src/app/user-management/view-user/view-user.component.html
@@ -1,4 +1,6 @@
 <p>view-user works!</p>
+<button (click)="logout()">LOG OUT</button>
+
 <div class="user-info">
     <h2>User Information</h2>
     <div *ngIf="userData">
@@ -14,5 +16,4 @@
 </div>
 <div *ngIf="errorMessage" class="error-message">
     {{ errorMessage }}
-  </div>
-  
+</div>
