Edit Login page & create 2 navbars & 2 homepages

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
+<ng-container *ngIf="!isLoggedIn; else loggedInTemplate">
+    <app-navigation></app-navigation>
+</ng-container>
+
+<ng-template #loggedInTemplate>
+    <app-navigation-priv></app-navigation-priv>
+</ng-template>
+
 <router-outlet></router-outlet>
