--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -5,33 +5,47 @@
   {{ successMessage }}
 </div>
 
-<br>
-<br>
-<button (click)="continueWithGoogle()">Continue with Google</button>
-<br>
-<br>
-<form [formGroup]="loginForm" (ngSubmit)="login()">
-  <div class="form-group">
-    <label>
-      Username:
-      <input type="text" formControlName="username">
-    </label>
-    <div *ngIf="loginForm.get('username')?.errors?.['required'] && loginForm.get('username')?.touched"
-      class="error-message">
-      Username is required.
-    </div>
-  </div>
 
-  <div class="form-group">
-    <label>
-      Password:
-      <input type="password" formControlName="password">
-    </label>
-    <div *ngIf="loginForm.get('password')?.errors?.['required'] && loginForm.get('password')?.touched"
-      class="error-message">
-      Password is required.
-    </div>
-  </div>
 
-  <button type="submit">Login</button>
-</form>
+<div class="update-container">
+  <div class="update-form">
+
+    <form [formGroup]="loginForm" (ngSubmit)="login()">
+      <div class="form-group">
+        <h1 class="passport-header">Sign in to e-Passport</h1>
+        <label>
+          Username:
+          <input type="text" formControlName="username">
+        </label>
+        <div *ngIf="loginForm.get('username')?.errors?.['required'] && loginForm.get('username')?.touched"
+          class="error-message">
+          Username is required.
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label>
+          Password:
+          <input type="password" formControlName="password">
+        </label>
+        <div *ngIf="loginForm.get('password')?.errors?.['required'] && loginForm.get('password')?.touched"
+          class="error-message">
+          Password is required.
+        </div>
+      </div>
+      <br>
+      <br>
+      <button type="submit">Login</button>
+      <br>
+      <br>
+      <button class="google-button" (click)="continueWithGoogle()">
+        Continue with Google
+      </button>
+      <br>
+      <br>
+      <a class="forgot-password-link" (click)="forgotPassword()">
+        Forgot password?
+      </a>
+    </form>
+  </div>
+</div>
