Create Contact page & edit Interceptor.ts and Login & Register page

--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -38,9 +38,9 @@
       <button type="submit">Login</button>
       <br>
       <br>
-      <button class="google-button" (click)="continueWithGoogle()">
+      <a class="google-button" (click)="continueWithGoogle()">
         Continue with Google
-      </button>
+      </a>
       <br>
       <br>
       <a class="forgot-password-link" (click)="forgotPassword()">
