--- a/src/app/authentication/register/register.component.css
+++ b/src/app/authentication/register/register.component.css
@@ -36,7 +36,7 @@ input[type="password"] {
 
 button[type="submit"] {
     background-color: #888;
-    color: #fff;
+    color: #000000;
     /* Changed text color to white */
     border: none;
     border-radius: 4px;
