--- a/src/app/authentication/register/register.component.html
+++ b/src/app/authentication/register/register.component.html
@@ -16,13 +16,13 @@
             <input type="password" formControlName="password" placeholder="Password" required
                 autocomplete="new-password">
             <button type="submit">
-                <span>Submit</span>
+                <span>Sign Up</span>
                 <i class="reload-icon" *ngIf="loading"></i> </button>
         </form>
         <br>
-        <button class="google-button" (click)="continueWithGoogle()">
-            Register with Google
-        </button>
+        <a class="google-button" (click)="continueWithGoogle()">
+            Continue with Google
+        </a>
 
     </div>
 </div>
