Create Delete Option & Edit view & edit-user page

--- a/src/app/private-components/navigation-priv/navigation-priv.component.html
+++ b/src/app/private-components/navigation-priv/navigation-priv.component.html
@@ -6,7 +6,7 @@
                 <a class="nav-link" routerLink="/dashboard">Dashboard</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink="/edit-user">My Account</a>
+                <a class="nav-link" routerLink="/view-user">My Account</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" routerLink="/contact">Contact</a>
