--- a/src/app/authentication/register/register.component.html
+++ b/src/app/authentication/register/register.component.html
@@ -21,8 +21,13 @@
         </form>
         <br>
         <a class="google-button" (click)="continueWithGoogle()">
-            Continue with Google
+            Sign Up with Google
         </a>
-
+        <br>
+        <br>
+        <br>
+        <a href="/login" class="link">
+            <span class="black-text">Already have an account?</span> <span class="blue-text"> Log in</span>
+        </a>
     </div>
 </div>
