--- a/src/app/authentication/login/login.component.css
+++ b/src/app/authentication/login/login.component.css
@@ -114,3 +114,20 @@ button[type="submit"] {
   font-size: 16px;
   transition: color 0.3s;
 }
+
+.link {
+  text-decoration: none;
+  /* Αφαίρεση υπογράμμισης από τον σύνδεσμο */
+  color: black;
+  /* Default χρώμα για τον σύνδεσμο */
+}
+
+.black-text {
+  color: black;
+  /* Ρητή ρύθμιση του χρώματος σε μαύρο */
+}
+
+.blue-text {
+  color: blue;
+  /* Ρητή ρύθμιση του χρώματος σε μπλε */
+}
