--- a/src/app/authentication/register/register.component.css
+++ b/src/app/authentication/register/register.component.css
@@ -119,3 +119,20 @@ button[type="submit"] {
     font-size: 16px;
 
 }
+
+.link {
+    text-decoration: none;
+    /* Αφαίρεση υπογράμμισης από τον σύνδεσμο */
+    color: black;
+    /* Default χρώμα για τον σύνδεσμο */
+}
+
+.black-text {
+    color: black;
+    /* Ρητή ρύθμιση του χρώματος σε μαύρο */
+}
+
+.blue-text {
+    color: blue;
+    /* Ρητή ρύθμιση του χρώματος σε μπλε */
+}
