Create Issuance passport component

--- a/src/app/private-components/dashboard/dashboard.component.html
+++ b/src/app/private-components/dashboard/dashboard.component.html
@@ -1,1 +1,8 @@
-<p>dashboard works!</p>
+<div class="update-container">
+  <div class="update-form">
+    <a href="/issuance-passport" class="link">
+      <span class="black-text">1. Έκδοση διαβατηρίου για ενήλικες</span>
+      <span class="blue-text">Πατήστε εδώ</span>
+    </a>
+  </div>
+</div>
