--- a/src/app/applications-citizen-views/issuance-passport-list/issuance-passport-list.component.css
+++ b/src/app/applications-citizen-views/issuance-passport-list/issuance-passport-list.component.css
@@ -21,52 +21,41 @@
     color: #333;
 }
 
-.form-group {
-    margin-bottom: 20px;
-}
-
-.form-group label {
-    display: block;
-    margin-bottom: 5px;
-    font-weight: bold;
-    color: #666;
-}
-
-.form-group input[type="file"] {
-    display: block;
+.table {
     width: 100%;
+    border-collapse: collapse;
+}
+
+.table td {
     padding: 10px;
-    font-size: 16px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
+    border-bottom: 1px solid #ddd;
+    text-align: center;
 }
 
-button[type="submit"] {
-    background-color: #888;
-    color: #000000;
-    border: none;
-    border-radius: 4px;
-    padding: 10px 20px;
+.table td:first-child {
+    font-weight: bold;
+    width: 30%;
+}
+
+.rejected {
+    background-color: red;
+}
+
+.pending {
+    background-color: yellow;
+}
+
+.canceled {
+    background-color: rgb(253, 0, 0);
+}
+
+.final-approval {
+    background-color: green;
+}
+
+.view-link {
     cursor: pointer;
-    font-size: 16px;
-
-}
-
-.error-message {
-    background-color: #f44336;
-    /* Red color */
-    color: black;
-    /* Text color */
-    padding: 15px 20px;
-    /* Padding */
-    border-radius: 5px;
-    /* Rounded corners */
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    /* Subtle shadow */
-    font-size: 16px;
-    /* Font size */
-    white-space: pre-line;
-    /* Κάνει την CSS να διατηρεί τις νέες γραμμές */
+    color: #007bff;
 
 }
 
@@ -79,4 +68,21 @@ button[type="submit"] {
     padding: 10px 20px;
     cursor: pointer;
     text-decoration: none;
+}
+
+.success-message {
+    background-color: #4caf50;
+    /* Green color */
+    color: white;
+    /* Text color */
+    padding: 15px 20px;
+    /* Padding */
+    border-radius: 5px;
+    /* Rounded corners */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    /* Subtle shadow */
+    font-size: 16px;
+    /* Font size */
+    margin-top: 20px;
+    /* Add margin for spacing */
 }
