--- a/src/app/private-components/dashboard/dashboard.component.html
+++ b/src/app/private-components/dashboard/dashboard.component.html
@@ -1,5 +1,9 @@
 <div class="update-container">
   <div class="update-form">
+    <a href="/issuance-view-citizen-list" class="link">
+      <span class="black-text">0. Οι Αιτήσεις μου</span>
+      <span class="blue-text">Πατήστε εδώ</span>
+    </a>
     <a href="/issuance-passport" class="link">
       <span class="black-text">1. Έκδοση διαβατηρίου για ενήλικες</span>
       <span class="blue-text">Πατήστε εδώ</span>
