--- a/src/app/applications-forms/issuance-passport/issuance-passport.component.html
+++ b/src/app/applications-forms/issuance-passport/issuance-passport.component.html
@@ -15,7 +15,8 @@
             <div class="form-group">
                 <label for="applicant_photo">Μια πρόσφατη έγχρωμη φωτογραφία 4x6 εκ. συγκεκριμένων τεχνικών
                     προδιαγραφών.</label>
-                <input type="file" id="applicant_photo" (change)="onFileChange($event, 2)" accept=".png" required />
+                <input type="file" id="applicant_photo" (change)="onFileChange($event, 2)" accept=".jpg, .jpeg, .png"
+                    required />
             </div>
 
             <div class="form-group">
