--- a/src/app/user-management/edit-user/edit-user.component.css
+++ b/src/app/user-management/edit-user/edit-user.component.css
@@ -105,3 +105,13 @@ button[type="submit"] {
         transform: rotate(360deg);
     }
 }
+
+.button {
+    background-color: #cec5c5;
+    color: #000000;
+    border: none;
+    border-radius: 4px;
+    padding: 10px 20px;
+    cursor: pointer;
+    font-size: 16px;
+}
