--- a/src/app/user-management/edit-phone-number/edit-phone-number.component.css
+++ b/src/app/user-management/edit-phone-number/edit-phone-number.component.css
@@ -1,3 +1,36 @@
+.update-container {
+    text-align: center;
+    margin-top: 50px;
+}
+
+.update-form {
+    display: inline-block;
+    padding: 20px;
+    background-color: #f9f9f9;
+    border-radius: 8px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+.form-group {
+    margin-bottom: 10px;
+}
+
+input[type="text"] {
+    width: 100%;
+    padding: 8px;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+}
+
+button[type="submit"] {
+    background-color: #888;
+    color: #000000;
+    border: none;
+    border-radius: 4px;
+    padding: 10px 20px;
+    cursor: pointer;
+}
+
 .error-message {
     background-color: #f44336;
     /* Red color */
@@ -33,35 +66,6 @@
     /* Add margin for spacing */
 }
 
-.update-container {
-    text-align: center;
-    margin-top: 50px;
-}
-
-.update-form {
-    display: inline-block;
-    padding: 20px;
-    background-color: #f9f9f9;
-    border-radius: 8px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-}
-
-button[type="submit"] {
-    background-color: #888;
-    color: #000000;
-    border: none;
-    border-radius: 4px;
-    padding: 10px 20px;
-    cursor: pointer;
-}
-
-input[type="password"] {
-    width: 100%;
-    padding: 8px;
-    border-radius: 4px;
-    border: 1px solid #ccc;
-}
-
 .button {
     background-color: #cec5c5;
     color: #000000;
@@ -70,14 +74,4 @@ input[type="password"] {
     padding: 10px 20px;
     cursor: pointer;
     font-size: 16px;
-}
-
-.pointer-cursor {
-    cursor: pointer;
-    color: blue;
-}
-
-.pointer2-cursor {
-    cursor: pointer;
-    color: rgb(255, 0, 0);
 }
