--- a/src/app/user-management/edit-phone-number/edit-phone-number.component.html
+++ b/src/app/user-management/edit-phone-number/edit-phone-number.component.html
@@ -1,26 +1,34 @@
-<div class="update-container">
-    <div class="update-form">
-        <div *ngIf="errorMessage" class="error-message">
-            {{ errorMessage }}
-        </div>
-        <div *ngIf="successMessage" class="success-message">
-            {{ successMessage }}
-        </div>
-        <div class="update-form">
-            <a href="/view-user" class="button">
-                Go BACK
-            </a>
-        </div>
-        <h2>Edit My Number</h2>
-        <form (ngSubmit)="submitForm()">
-            <div class="form-group">
-                <label for="number">Phone Number:</label>
-                <input type="text" id="number" name="number" [(ngModel)]="phoneNumber.number" required>
-            </div>
-            <button type="submit">
-                <span>Update</span>
-
-            </button>
-        </form>
-    </div>
+<div *ngIf="firstErrorMessage; else detailsTemplate" class="error-message">
+    {{ firstErrorMessage }}
 </div>
+
+<ng-template #detailsTemplate>
+
+    <div class="update-container">
+        <div class="update-form">
+            <div *ngIf="errorMessage" class="error-message">
+                {{ errorMessage }}
+            </div>
+            <div *ngIf="successMessage" class="success-message">
+                {{ successMessage }}
+            </div>
+            <div class="update-form">
+                <a href="/view-user" class="button">
+                    Go BACK
+                </a>
+            </div>
+            <h2>Edit My Number</h2>
+            <form (ngSubmit)="submitForm()">
+                <div class="form-group">
+                    <label for="number">Phone Number:</label>
+                    <input type="text" id="number" name="number" [(ngModel)]="phoneNumber.number" required>
+                </div>
+                <button type="submit">
+                    <span>Update</span>
+
+                </button>
+            </form>
+        </div>
+    </div>
+
+</ng-template>
