Create Renewal-Passport component

--- a/src/app/private-components/dashboard/dashboard.component.html
+++ b/src/app/private-components/dashboard/dashboard.component.html
@@ -8,5 +8,9 @@
       <span class="black-text">1. Έκδοση διαβατηρίου για ενήλικες</span>
       <span class="blue-text">Πατήστε εδώ</span>
     </a>
+    <a href="/renewal-passport" class="link">
+      <span class="black-text">2. Έκδοση διαβατηρίου για ανανέωσης διαβατηρίου</span>
+      <span class="blue-text">Πατήστε εδώ</span>
+    </a>
   </div>
 </div>
