Create Replacement-Passport component

--- a/src/app/applications-forms/replacement-passport/replacement-passport.component.html
+++ b/src/app/applications-forms/replacement-passport/replacement-passport.component.html
@@ -5,7 +5,7 @@
         <a class="back-button" href="/dashboard">Go to BACK</a>
 
         <form (ngSubmit)="onSubmit()" #pdfForm="ngForm">
-            <h1>2. Aνανέωση διαβατηρίου</h1>
+            <h1>3. Aντικατάσταση διαβατηρίου</h1>
             <div class="form-group">
                 <label for="id_card_copy">Φωτοαντίγραφο δύο όψεων του δελτίου αστυνομικής ταυτότητας στην ίδια
                     σελίδα:</label>
