--- a/src/app/private-components/dashboard/dashboard.component.html
+++ b/src/app/private-components/dashboard/dashboard.component.html
@@ -9,7 +9,11 @@
       <span class="blue-text">Πατήστε εδώ</span>
     </a>
     <a href="/renewal-passport" class="link">
-      <span class="black-text">2. Έκδοση διαβατηρίου για ανανέωσης διαβατηρίου</span>
+      <span class="black-text">2. Aνανέωση διαβατηρίου</span>
+      <span class="blue-text">Πατήστε εδώ</span>
+    </a>
+    <a href="/replacement-passport" class="link">
+      <span class="black-text">3. Aντικατάσταση διαβατηρίου</span>
       <span class="blue-text">Πατήστε εδώ</span>
     </a>
   </div>
