Create Theft Or Loss Passport component

--- a/src/app/applications-citizen-views/issuance-passport-view/issuance-passport-view.component.html
+++ b/src/app/applications-citizen-views/issuance-passport-view/issuance-passport-view.component.html
@@ -66,10 +66,9 @@
 
       <div class="form-group" *ngIf="passportDetails.police_report">
 
-        <label>Bεβαίωση Ελληνικής Αρχής στην οποία δηλώθηκε η κλοπή, η απώλεια, ή η ολική καταστροφή:</label>
+        <label>Bεβαίωση Ελληνικής Αρχής στην οποία δηλώθηκε η κλοπή ή απώλεια:</label>
         <p (click)="downloadFile('police_report', passportDetails.id,passportDetails.application_type)"
-          class="download-link">Download Old
-          Passport</p>
+          class="download-link">Download </p>
 
       </div>
 
