--- a/src/app/private-components/dashboard/dashboard.component.html
+++ b/src/app/private-components/dashboard/dashboard.component.html
@@ -16,5 +16,9 @@
       <span class="black-text">3. Aντικατάσταση διαβατηρίου</span>
       <span class="blue-text">Πατήστε εδώ</span>
     </a>
+    <a href="/theftOrLoss-passport" class="link">
+      <span class="black-text">4.Έκδοσης διαβατηρίου λόγω κλοπής ή απώλειας</span>
+      <span class="blue-text">Πατήστε εδώ</span>
+    </a>
   </div>
 </div>
