Create Issuance Minors Passport component

--- a/src/app/private-components/dashboard/dashboard.component.html
+++ b/src/app/private-components/dashboard/dashboard.component.html
@@ -20,5 +20,9 @@
       <span class="black-text">4.Έκδοσης διαβατηρίου λόγω κλοπής ή απώλειας</span>
       <span class="blue-text">Πατήστε εδώ</span>
     </a>
+    <a href="/issuance-minors-passport" class="link">
+      <span class="black-text">5.Έκδοσης διαβατηρίου για ανήλικoυς</span>
+      <span class="blue-text">Πατήστε εδώ</span>
+    </a>
   </div>
 </div>
