--- a/src/app/private-components/navigation-priv/navigation-priv.component.html
+++ b/src/app/private-components/navigation-priv/navigation-priv.component.html
@@ -1,10 +1,19 @@
 <nav class="navbar">
     <div class="navbar-container">
-        <a class="navbar-brand" routerLink="/dashboard">e-Passport Dashboard</a>
+        <div class="nav-item" *ngIf="type_user === 'cityzen'">
+            <a class="navbar-brand" routerLink="/dashboard">e-Passport Dashboard</a>
+        </div>
+        <div class="nav-item" *ngIf="type_user === 'employeeYP01' || type_user === 'employeeYP02'">
+            <a class="navbar-brand" routerLink="/dashboard-employee">e-Passport Dashboard</a>
+        </div>
         <ul class="navbar-nav">
-            <li class="nav-item">
+            <li class="nav-item" *ngIf="type_user === 'cityzen'">
                 <a class="nav-link" routerLink="/dashboard">Dashboard</a>
             </li>
+            <li class="nav-item" *ngIf="type_user === 'employeeYP01' || type_user === 'employeeYP02'">
+                <a class="nav-link" routerLink="/dashboard-employee">Dashboard</a>
+            </li>
+
             <li class="nav-item">
                 <a class="nav-link" routerLink="/view-user">My Account</a>
             </li>
