--- a/src/app/user-management/view-user/view-user.component.html
+++ b/src/app/user-management/view-user/view-user.component.html
@@ -1,7 +1,10 @@
 <div class="update-container">
     <div class="update-form">
-        <div *ngIf="errorMessageDepartment" class="error-message">
-            {{ errorMessageDepartment }}
+        <div
+            *ngIf="type_user !== 'admin' && type_user !==  'employeeYP01' && type_user !== 'employeeYP02' && type_user !==  'employeeSEC'">
+            <div *ngIf="errorMessageDepartment" class="error-message">
+                {{ errorMessageDepartment }}
+            </div>
         </div>
         <div class="update-form">
             <a class="button" href="/dashboard">Go to BACK</a>
@@ -17,7 +20,10 @@
 
         <h2>User Information</h2>
         <div *ngIf="userData">
-            <p><strong>Department:</strong> {{ department_name }}</p>
+
+            <div *ngIf="type_user !== 'admin'">
+                <p><strong>Department:</strong> {{ department_name }}</p>
+            </div>
             <p><strong>ID:</strong> {{ userData.id }}</p>
             <p><strong>Email:</strong> {{ userData.email }}</p>
             <p><strong>First Name:</strong> {{ userData.first_name }}</p>
