--- a/src/app/applications-citizen-views/issuance-passport-edit/issuance-passport-edit.component.html
+++ b/src/app/applications-citizen-views/issuance-passport-edit/issuance-passport-edit.component.html
@@ -8,7 +8,13 @@
 <ng-template #detailsTemplate>
     <div class="update-container">
         <div class="update-form">
-            <a class="back-button" href="/issuance-view-citizen-list">Go to BACK</a>
+            <ng-container *ngIf=" this.type_user === 'cityzen'">
+                <a class="back-button" href="/issuance-view-citizen-list">Go to BACK</a>
+            </ng-container>
+            <ng-container *ngIf=" this.type_user === 'employeeYP01' || this.type_user === 'employeeYP02'">
+                <a class="back-button" href="/issuance-view-employee-view">Go to BACK</a>
+            </ng-container>
+
             <form (ngSubmit)="onSubmit()" #pdfForm="ngForm">
                 <div *ngIf="errorMessageEdit" class="error-message">
                     {{ errorMessageEdit }}
