--- a/src/app/private-components/dashboard-employee/dashboard-employee.component.html
+++ b/src/app/private-components/dashboard-employee/dashboard-employee.component.html
@@ -1,1 +1,9 @@
-<h1>HELLO</h1>
+<div class="update-container">
+  <div class="update-form">
+    <a href="/issuance-view-employee-view" class="link">
+      <span class="black-text">Αιτήσεις για επιβεβαιωση</span>
+      <span class="blue-text">Πατήστε εδώ</span>
+    </a>
+
+  </div>
+</div>
